fix creating items and events
